--- a/MoviesCatalogueSopro/Views/Movies/Create.cshtml
+++ b/MoviesCatalogueSopro/Views/Movies/Create.cshtml
@@ -1,12 +1,11 @@
 ﻿@model MoviesCatalogueSopro.Models.Movie
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Create New Movie";
 }
 
-<h1>Create</h1>
+<h1>Create New Movie</h1>
 
-<h4>Movie</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -53,7 +52,7 @@
     </div>
 </div>
 
-<div>
+<div class="listButton">
     <a asp-action="Index">Back to List</a>
 </div>
 
