--- a/MoviesCatalogueSopro/Views/Movies/Index.cshtml
+++ b/MoviesCatalogueSopro/Views/Movies/Index.cshtml
@@ -1,14 +1,14 @@
 ﻿@model IEnumerable<MoviesCatalogueSopro.Models.Movie>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Movie Catalogue";
 }
 
-<h1>Index</h1>
+<h1>Movie Catalogue</h1>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
+<div class="createButton">
+    <a asp-action="Create">Create New</a>    
+</div>
 <table class="table">
     <thead>
         <tr>
