--- a/MoviesCatalogueSopro/Views/Movies/Delete.cshtml
+++ b/MoviesCatalogueSopro/Views/Movies/Delete.cshtml
@@ -1,65 +1,68 @@
 ﻿@model MoviesCatalogueSopro.Models.Movie
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Delete Movie";
 }
 
-<h1>Delete</h1>
+<h1>Delete Movie</h1>
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Movie</h4>
     <hr />
-    <dl class="row">
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Title)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Title)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.MovieUrl)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.MovieUrl)
-        </dd>
+    <div class="details">
+        <dl class="row">
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.Title)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.Title)
+            </dd>
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.MovieUrl)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.MovieUrl)
+            </dd>
 
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.ReleaseDate)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.ReleaseDate)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Rating)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Rating)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Link)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Link)
-        </dd>
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.ReleaseDate)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.ReleaseDate)
+            </dd>
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.Rating)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.Rating)
+            </dd>
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.Link)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.Link)
+            </dd>
 
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Genre)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Genre.GenreId)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.People)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.People.Name)
-        </dd>
-    </dl>
-    
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.Genre)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.Genre.GenreId)
+            </dd>
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.People)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.People.Name)
+            </dd>
+        </dl>
+    </div>
+
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <div class="listButtonDelete">
+            <a asp-action="Index">Back to List</a>
+        </div>
     </form>
 </div>
