--- a/MoviesCatalogueSopro/Views/Genres/Create.cshtml
+++ b/MoviesCatalogueSopro/Views/Genres/Create.cshtml
@@ -1,12 +1,11 @@
 ﻿@model MoviesCatalogueSopro.Models.Genre
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Create New Genre";
 }
 
-<h1>Create</h1>
+<h1>Create New Genre</h1>
 
-<h4>Genre</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -29,7 +28,7 @@
     </div>
 </div>
 
-<div>
+<div class="listButton">
     <a asp-action="Index">Back to List</a>
 </div>
 
