--- a/MoviesCatalogueSopro/Views/Genres/Edit.cshtml
+++ b/MoviesCatalogueSopro/Views/Genres/Edit.cshtml
@@ -1,12 +1,11 @@
 ﻿@model MoviesCatalogueSopro.Models.Genre
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Edit Genre";
 }
 
-<h1>Edit</h1>
+<h1>Edit Genre</h1>
 
-<h4>Genre</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -30,7 +29,7 @@
     </div>
 </div>
 
-<div>
+<div class="listButtonEdit">
     <a asp-action="Index">Back to List</a>
 </div>
 
