--- a/MoviesCatalogueSopro/Views/Libraries/Index.cshtml
+++ b/MoviesCatalogueSopro/Views/Libraries/Index.cshtml
@@ -1,14 +1,14 @@
 ﻿@model IEnumerable<MoviesCatalogueSopro.Models.Library>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Create Library";
 }
 
-<h1>Index</h1>
+<h1>Create Library</h1>
 
-<p>
+<div class="createButton">
     <a asp-action="Create">Create New</a>
-</p>
+</div>
 <table class="table">
     <thead>
         <tr>
@@ -19,17 +19,18 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Name)
+                </td>
+                <td>
+                    <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
+                    <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                    <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
