--- a/MoviesCatalogueSopro/Views/People/Create.cshtml
+++ b/MoviesCatalogueSopro/Views/People/Create.cshtml
@@ -1,12 +1,11 @@
 ﻿@model MoviesCatalogueSopro.Models.Person
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Create Person";
 }
 
-<h1>Create</h1>
+<h1>Create Person</h1>
 
-<h4>Person</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -24,7 +23,7 @@
     </div>
 </div>
 
-<div>
+<div class="listButton">
     <a asp-action="Index">Back to List</a>
 </div>
 
