--- a/MoviesCatalogueSopro/Views/People/Edit.cshtml
+++ b/MoviesCatalogueSopro/Views/People/Edit.cshtml
@@ -1,12 +1,11 @@
 ﻿@model MoviesCatalogueSopro.Models.Person
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Edit Person";
 }
 
-<h1>Edit</h1>
+<h1>Edit Person</h1>
 
-<h4>Person</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -25,7 +24,7 @@
     </div>
 </div>
 
-<div>
+<div class="listButtonEdit">
     <a asp-action="Index">Back to List</a>
 </div>
 
