--- a/MoviesCatalogueSopro/Views/People/Details.cshtml
+++ b/MoviesCatalogueSopro/Views/People/Details.cshtml
@@ -1,24 +1,22 @@
 ﻿@model MoviesCatalogueSopro.Models.Person
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Details Of People";
 }
 
-<h1>Details</h1>
+<h1>Details Of People</h1>
 
 <div>
-    <h4>Person</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Name)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Name)
         </dd>
     </dl>
 </div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model.PersonId">Edit</a> |
+<div class="listButtonDetails">
     <a asp-action="Index">Back to List</a>
 </div>
