--- a/MoviesCatalogueSopro/Views/Libraries/Index.cshtml
+++ b/MoviesCatalogueSopro/Views/Libraries/Index.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<MoviesCatalogueSopro.Models.Library>
 
 @{
-    ViewData["Title"] = "Create Library";
+    ViewData["Title"] = "Library";
 }
 
-<h1>Create Library</h1>
+<h1>Library</h1>
 
 <div class="createButton">
     <a asp-action="Create">Create New</a>
