--- a/MoviesCatalogueSopro/Views/Libraries/AddMovieToLibrary.cshtml
+++ b/MoviesCatalogueSopro/Views/Libraries/AddMovieToLibrary.cshtml
@@ -11,7 +11,7 @@
     <div class="form-group">
         @Html.DropDownListFor(m => m.movieId, new SelectList(Model.Movies, "Id", "Title"), new { @class = "form-control" })
     </div>
-    <button type="submit" class="btn btn-default">Save</button>
+    <button type="submit" class="btn btn-primary">Add</button>
 
     @Html.HiddenFor(m => m.libraryId)
 } 
